--- a/Targeting_Parser.html
+++ b/Targeting_Parser.html
@@ -31,8 +31,9 @@
 		}
 
 		function download(filename, text) {
+			var universalBOM = "\uFEFF";
 			var element = document.createElement('a');
-			element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+			element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(universalBOM + text));
 			element.setAttribute('download', filename);
 			element.style.display = 'none';
 			document.body.appendChild(element);
