Added French headers for Awareness and Traffic campaigns. Add French option in the html.

--- a/Targeting_Parser_CleanUp.html
+++ b/Targeting_Parser_CleanUp.html
@@ -205,7 +205,8 @@
     <br />
     <h2>Language</h2>
     <input type="radio" name="language" id="lng_ger" value="DE"><label for="lng_ger">German</label>
-    <input type="radio" name="language" id="lng_eng" value="EN"><label for="lng_eng">English</label>
+	<input type="radio" name="language" id="lng_eng" value="EN"><label for="lng_eng">English</label>
+	<input type="radio" name="language" id="lng_fr" value="FR"><label for="lng_fr">French</label>
     <br />
     <br />
     <h2>Campaign Type</h2>
