--- a/Targeting_Parser_CleanUp.html
+++ b/Targeting_Parser_CleanUp.html
@@ -44,6 +44,9 @@
 		}
 
 		function cleanUpCSVRawData(header, dirty) {
+			if (dirty.length == 0) {
+				return dirty;
+			}
 			var clean;
 			if(header.language == ENGLISH) {
 				if(isNaN(dirty[0]) == false || dirty[0] == "€") {
