--- a/Targeting_Parser_CleanUp.html
+++ b/Targeting_Parser_CleanUp.html
@@ -44,7 +44,7 @@
 		}
 
 		function cleanUpCSVRawData(header, dirty) {
-			if (dirty.length == 0 || dirty == undefined) {
+			if (dirty == undefined || dirty.length == 0) {
 				return dirty;
 			}
 			var clean;
