--- a/tools/CSV_Format_Changer.html
+++ b/tools/CSV_Format_Changer.html
@@ -2,7 +2,7 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<script src="../papaparse.min.js"></script>
+		<script src="https://mastermarci.github.io/csv_cmpg_strlzr/papaparse.min.js"></script>
 		<script>
 
 		const PAPAPARSE_CONFIG = {
